test_regress/t/t_fuzz_triand_bad.out
%Error: t/t_fuzz_triand_bad.v:7: Unsupported: Member call on non-enum object 'VARREF 'g'' which is a 'BASICDTYPE 'logic''
                               : ... In instance t
   tri g=g.and.g;
           ^~~
%Error: Internal Error: t/t_fuzz_triand_bad.v:7: ../V3Width.cpp:#: Unlinked data type
                                               : ... In instance t
   tri g=g.and.g;
           ^~~
                        ... See the manual and http://www.veripool.org/verilator for more assistance.
